switching to home.arpa domain as this the one defined in the standard. removed the ssl dependencies as the home.arpa will support only self-signed certs that wll require special handling in the devices in the network. there is a sniffing risk but I don't find it critical. convenience is more important in this case

--- a/files/launchd.plist.tmpl
+++ b/files/launchd.plist.tmpl
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
- "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
-    <key>Label</key>           <string>homebrew.nginx.local</string>
-
+<dict>
+    <key>Label</key>
+    <string>homebrew.home-server.local</string>
     <key>ProgramArguments</key>
     <array>
-      <string>{{BREW_NGINX}}</string>
-      <string>-c</string>      <string>{{NGINX_CONF}}</string>
-      <string>-g</string>      <string>daemon off;</string>
+        <string>{{BREW_NGINX}}</string>
+        <string>-c</string>
+        <string>{{NGINX_DIR}}/nginx.conf</string>
+        <string>-p</string>
+        <string>{{NGINX_DIR}}</string>
     </array>
-
-    <key>RunAtLoad</key>       <true/>
-    <key>KeepAlive</key>       <true/>
-  </dict>
+    <key>RunAtLoad</key>
+    <true/>
+    <key>KeepAlive</key>
+    <true/>
+    <key>StandardOutPath</key>
+    <string>{{LOGS_DIR}}/stdout.log</string>
+    <key>StandardErrorPath</key>
+    <string>{{LOGS_DIR}}/stderr.log</string>
+</dict>
 </plist>
