--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -1,14 +1,26 @@
 worker_processes auto;
-error_log  stderr notice;
-pid        {{ROOT_DIR}}/nginx/nginx.pid;
+daemon off;
 
-events { worker_connections 1024; }
+error_log  {{LOGS_DIR}}/error.log notice;
+pid        {{NGINX_DIR}}/nginx.pid;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-    include       {{HOMEBREW_PREFIX}}/etc/nginx/mime.types;
+    include       $(brew --prefix)/etc/nginx/mime.types;
     default_type  application/octet-stream;
     sendfile      on;
     keepalive_timeout 65;
 
-    include {{ROOT_DIR}}/nginx/sites-enabled/*.conf;
+    access_log  {{LOGS_DIR}}/access.log;
+
+    server {
+        listen 80;
+        server_name {{DOMAIN}};
+        root {{HTML_DIR}};
+    }
+
+    include {{SITES_DIR}}/*.conf;
 }
