--- a/files/vhost.conf.tmpl
+++ b/files/vhost.conf.tmpl
@@ -1,46 +1,66 @@
-map $http_upgrade $connection_upgrade { default close; "websocket" upgrade; "upgrade" upgrade; }
+# {{HOMEBREW_PREFIX}}/etc/nginx/vhost.conf.tmpl
+map $http_upgrade $connection_upgrade {
+    default close;
+    "websocket" upgrade;
+    "upgrade" upgrade;
+}
 
-ssl_certificate     {{CRT}};
-ssl_certificate_key {{KEY}};
-ssl_protocols       TLSv1.2 TLSv1.3;
-ssl_prefer_server_ciphers on;
-
-# ---------- :80 ----------
 server {
     listen 80;
     server_name {{DOMAIN}};
-    root {{ROOT_DIR}}/html;
+    root {{HTML_DIR}};
     index index.html;
+    
+    location / {
+        try_files $uri $uri/ =404;
+    }
 }
 
 server {
     listen 80;
-    server_name unifi.{{DOMAIN}} pms.{{DOMAIN}} ha.{{DOMAIN}} qbittorrent.{{DOMAIN}};
-    return 301 https://$host$request_uri;
+    server_name unifi.{{DOMAIN}};
+
+    location / {
+        proxy_pass http://127.0.0.1:8443;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
 
-# ---------- upstreams ----------
-upstream unifi_backend      { server 127.0.0.1:8443; }
-upstream plex_backend       { server 127.0.0.1:32400; }
-upstream ha_backend         { server {{HA_BACKEND}}; }
-upstream qbittorrent_backend{ server 127.0.0.1:8081; }
+server {
+    listen 80;
+    server_name pms.{{DOMAIN}};
+    
+    location / {
+        proxy_pass http://127.0.0.1:32400;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Plex-Client-Identifier $remote_addr;
+        proxy_set_header X-Plex-Device-Name "{{DOMAIN}}";
+    }
+}
 
-# shared headers
-map "" "\nproxy_set_header Host \\$host;\nproxy_set_header X-Real-IP \\$remote_addr;\n\
-proxy_set_header X-Forwarded-For \\$proxy_add_x_forwarded_for;\n\
-proxy_set_header X-Forwarded-Proto \\$scheme;\n\
-proxy_set_header Upgrade \\$http_upgrade;\nproxy_set_header Connection \\$connection_upgrade;\n" proxy_params;
+server {
+    listen 80;
+    server_name ha.{{DOMAIN}};
+    
+    location / {
+        proxy_pass http://{{HA_BACKEND}};
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
 
-# ---------- vhosts 443 ----------
-server { listen 443 ssl http2; server_name unifi.{{DOMAIN}};
-         proxy_ssl_verify off; proxy_ssl_server_name on;
-         location / { proxy_pass https://unifi_backend; include proxy_params; } }
-
-server { listen 443 ssl http2; server_name pms.{{DOMAIN}};
-         location / { proxy_pass http://plex_backend; include proxy_params; } }
-
-server { listen 443 ssl http2; server_name ha.{{DOMAIN}};
-         location / { proxy_pass http://ha_backend; include proxy_params; } }
-
-server { listen 443 ssl http2; server_name qbittorrent.{{DOMAIN}};
-         location / { proxy_pass http://qbittorrent_backend; include proxy_params; } }
+server {
+    listen 80;
+    server_name qbittorrent.{{DOMAIN}};
+    
+    location / {
+        proxy_pass http://127.0.0.1:8081;
+        proxy_set_header Host $host;
+    }
+}
